# Cyber-Security-Project

./: LICENSE  README.MD  pyproject.toml
Emails/: GenEmails.json  SPAMorNOT.json  email list.csv  zendoEmails.json
Helpers/: CSV_to_JSON.py  SpamOrNot.py
SendEmails/: Email_List_Selecter.py  sendingemails.py
