[project]
name = "cybersecuritysubmission"
version = "0.1.0"
description = "Submission for Todd Watkins 23010802 Cyber Security Project"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.10.8",
    "mime>=0.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pathlib>=1.0.1",
    "pylint>=4.0.5",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
]
